--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    background: rgb(0, 0, 0);
-    background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 35%, rgba(17, 17, 17, 1) 100%);
+:root {
+    background: rgb(0, 0, 0) !important;
+    background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 35%, rgba(17, 17, 17, 1) 100%) !important;
+    height: 100% !important;
 }
